fix spacing issues on homepage

--- a/app/(notLoggedIn)/page.module.css
+++ b/app/(notLoggedIn)/page.module.css
@@ -29,14 +29,14 @@
 }
 
 .contentone {
-    margin: 80px 50px 40px 40px;
+    margin: 80px auto 40px auto;
     grid-row: 3 / 4;
     grid-column: 1 / 3;
     color: var(--text);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 100%;
-    grid-column-gap: 10px;
+    width: 90%;
+    column-gap: 50px;
 }
 
 .contenttwo {
@@ -46,8 +46,8 @@
     color: var(--text);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 100%;
-    grid-column-gap: 50px;
+    width: 90%;
+    column-gap: 50px;
 }
 
 .contentonetext {
